// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vi<ENTER>ihello 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 1,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [
      "hello world",
    ],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 1,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 1,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 1,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\` 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 0,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\` 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\` 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\`:cmd 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "cmd",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 2,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\`:cmd 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\`:cmd 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "_",
      "CARET_ACTIVE": false,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": "_",
    "CARET_ACTIVE": false,
    "POSTCARET": "",
    "PRECARET": "cmd",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FULL_SCREEN": true,
  "MODE": 2,
  "NAME": "vi",
  "OLD_COMMANDS": [],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;
